# learning-note02

./: .gitignore  README.md
evaluation/: 1.Basic.ipynb
langgraph/: docker-compose.yml
langgraph/1.Conditional Routing/: 1.basic.ipynb  2.structure_output.ipynb
langgraph/2.Reflection Agent/: 1.reflection_agent.ipynb
langgraph/3.ReAct Agent/: 1.reAct_agent.ipynb
langgraph/4.Agentic Memory and Streaming/: 1.manual_interrupt_by_input.py  2.command_and_interrupt.py  3.interrupt_by_tools.py  4.short_term_memory_sqlite.ipynb  5.long_term_memory.ipynb  6.credit_transaction_approval.ipynb
langgraph/5.RAG Agent/: 1.rag_tools_calling.ipynb  2.classification_driven_agent.ipynb  3.advanced_multi_step_reasoning.ipynb
langgraph/6.Multi Agent/: 1.subgraphs.ipynb  2.supervisor_multiagent_workflow.ipynb
mcp/: 1.Basic.py  2.MCP_Client.py  3.Agentic agent.py
mcp/tools/: accounts.py  accounts_client.py  accounts_server.py  database.py  market.py  market_server.py  mcp_params.py
openai agent sdk/1.Basic/: 1.basic.ipynb  2.structure_output.ipynb
rag/: pyproject.toml
rag/1. Basic Rag With Chroma/: basic_rag_chroma.ipynb  basic_rag_chroma.py
rag/1. Basic Rag With Chroma/docs/: bom.txt  einvoice.txt
rag/2. History Rag/: history_rag.ipynb  history_rag.py
rag/3. Text Splitter/: text_splitter.ipynb
rag/4. Multi Modal Rag/: chunks_export.json  multi_modal_rag.ipynb  rag_results.json
rag/5. Retrieval Methods/: retrieval_methods.ipynb
rag/6. Agentic Rag/: agentic_rag.ipynb
rag/7. ReRanker/: reranker.ipynb
rag/utils/: vector_db.py
(+2 files in other folders)
